--- a/optum/test-output/emailable-report.html
+++ b/optum/test-output/emailable-report.html
@@ -8,16 +8,15 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Failed suite [Surefire suite]</th></tr>
-<tr><td><a href="#t0">Surefire test(failed)</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">86</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">95</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Failed suite [Surefire suite]</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Surefire test(failed) &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.ignite.optum.Annotatio3</td><td><a href="#m0">test2</a></td><td rowspan="1">1741851007169</td><td rowspan="1">21</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">com.ignite.optum.Annotatio3</td><td><a href="#m0">count</a></td><td rowspan="2">1742144974250</td><td rowspan="2">18</td></tr><tr class="passedeven"><td><a href="#m1">count</a></td></tr><tr class="passedeven"><td><a href="#m2">group</a></td><td rowspan="1">1742144974279</td><td rowspan="1">3</td></tr><tr class="passedeven"><td><a href="#m3">test2</a></td><td rowspan="1">1742144974284</td><td rowspan="1">4</td></tr><tr class="passedeven"><td><a href="#m4">test3</a></td><td rowspan="1">1742144974293</td><td rowspan="1">1</td></tr></tbody>
 </table>
-<h2>Surefire test(failed)</h2><h3 id="m0">com.ignite.optum.Annotatio3#test2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">junit.framework.ComparisonFailure: expected:&lt;a...&gt; but was:&lt;b...&gt;
-	at junit.framework.Assert.assertEquals(Assert.java:81)
-	at junit.framework.Assert.assertEquals(Assert.java:87)
-	at com.ignite.optum.Annotatio3.test2(Annotatio3.java:18)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
-... Removed 25 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.ignite.optum.Annotatio3#count</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.ignite.optum.Annotatio3#count</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.ignite.optum.Annotatio3#group</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.ignite.optum.Annotatio3#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.ignite.optum.Annotatio3#test3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
