--- a/optum/test-output/old/Default suite/methods-alphabetical.html
+++ b/optum/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87b08d">  <td>25/03/21 14:51:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RegExpression.regrx()[pri:0, instance:com.ignite.optum.RegExpression@75d4a5c2]">regrx</td> 
+<tr bgcolor="ef7869">  <td>25/03/25 15:06:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="getHttpRequest.getHttpRequest()[pri:0, instance:RestAssured.getHttpRequest@b91d8c4]">getHttpRequest</td> 
   <td>main@1554547125</td>   <td></td> </tr>
 </table>
